fixed weird overflow bugs with blog on mobile

--- a/base.css
+++ b/base.css
@@ -95,5 +95,6 @@ a {
     main {
         font-size: 1.1rem;
         line-height: 1.8rem;
+        max-width: 100%;
     }
 }
